Fixed nav bar height overlap

--- a/nav.css
+++ b/nav.css
@@ -3,7 +3,7 @@
 	height: 42px;
 	display: block;
 	width: 100%;
-	background: #292929;
+	background: #503b27;
 	z-index: 101;
 	text-align: center;
 	color: #f2f2f2;
@@ -50,7 +50,7 @@ ul.topnav.responsive {
 	z-index: 199;
 	margin: 0;
 	padding: 0;
-	top: 35px;
+	top: 42px;
 	height: 225px;
 }
 
@@ -74,7 +74,7 @@ ul.topnav.responsive li a {
 }
 
 .topnav.responsive {
-	background-color: #292929;
+	background-color: #615449;
 }
 
 .burger {
@@ -136,6 +136,9 @@ ul.topnav.responsive li a {
   display: none !important;
 }
 
+.responsive .hamburger-box {
+	width: 80px;
+}
 
 /*
 #fp-nav ul li a.active span, .fp-slidesNav ul li a.active span, #fp-nav ul li:hover a.active span, .fp-slidesNav ul li:hover a.active span {
